Update info.plist developer url

--- a/ContoursLock.roboFontExt/info.plist
+++ b/ContoursLock.roboFontExt/info.plist
@@ -16,7 +16,7 @@
 	<key>developer</key>
 	<string>Thom Janssen</string>
 	<key>developerURL</key>
-	<string>www.geenbitter.nl</string>
+	<string>https://www.geenbitter.nl</string>
 	<key>html</key>
 	<true/>
 	<key>launchAtStartUp</key>
